@@ -67,8 +67,14 @@
       not).  The official name, \code{"UTF-8"} is still preferred.
 
       \item \code{available.packages()} is better protected against
-      corrupt metadata files (A recurring problem on Debian:
-      \PR{14713}).
+      corrupt metadata files (a recurring problem with Debian package
+      \code{shogun-r}: \PR{14713}).
+      
+      \item Finalizers are marked to be run at garbage collection, but
+      run only at a somewhat safer later time (when interrupts are next
+      checked).  This avoids problems with finalizers running arbitrary
+      code during garbage collection (the known instance was running
+      \code{options()} re-entrantly.
     }
   }
 
